# comp_mod

./: .gitignore  lab1.ipynb  lab2.ipynb  lab3.ipynb  pyproject.toml
