[tool.poetry]
name = "comp-mod"
version = "0.1.0"
description = ""
authors = ["Arslan 'ArsNotFound' Sakhapov <arslan.sakhapov@yandex.ru>"]
readme = "README.md"
packages = [{include = "comp_mod"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
